--- a/style.css
+++ b/style.css
@@ -225,7 +225,8 @@ nav {
   font-size: 16px;
   line-height: 24px;
   color: #7f8cff;
-  margin: 0px 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #twitter {
