--- a/style.css
+++ b/style.css
@@ -45,10 +45,18 @@ header {
   flex-grow: 0;
 }
 
+#my-logo:hover {
+  opacity: 0.7;
+}
+
 #hamburger-menu {
   width: 20px;
   height: 20px;
   color: #acb7c3;
+}
+
+#hamburger-menu:hover {
+  opacity: 0.7;
 }
 
 .fa-bars {
