--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
   width: 375px;
   height: 718px;
   background: #fff;
-  overflow: hidden;
 }
 
 a {
@@ -63,12 +62,12 @@ header {
   color: #6070ff;
 }
 
-section {
+#front-section {
   background-image: url("./utils/header-shapesmobile@2x.svg");
   background-repeat: no-repeat;
 }
 
-#first-section {
+#first-subsection {
   position: relative;
   width: 327px;
   height: 100px;
@@ -87,7 +86,7 @@ section {
   margin: 12px 20px;
 }
 
-#second-section {
+#second-subsection {
   position: relative;
   width: 327px;
   height: 146px;
@@ -104,12 +103,12 @@ section {
   margin: 12px 20px;
 }
 
-#link {
+.link {
   position: relative;
   top: 176px;
 }
 
-#connect {
+.connect {
   position: static;
   width: 130px;
   height: 24px;
@@ -123,11 +122,11 @@ section {
   margin-right: 20px;
 }
 
-#connect:hover {
+.connect:hover {
   opacity: 0.7;
 }
 
-#social-media {
+.social-media {
   position: relative;
   top: 176px;
   list-style-type: none;
@@ -136,8 +135,14 @@ section {
   display: inline-block;
 }
 
+ul {
+  list-style-type: none;
+  padding-inline-start: 0px;
+}
+
 li {
   float: left;
+  align-content: center;
 }
 
 li a {
@@ -150,4 +155,209 @@ li a {
 
 li a:hover {
   opacity: 0.7;
+}
+
+#works {
+  display: grid;
+  margin-top: 110px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  width: 327px;
+  height: 552px;
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  box-sizing: border-box;
+  border-radius: 16px;
+  margin: 88px 12px;
+}
+
+#snapshot1 {
+  position: static;
+  width: 295px;
+  height: 220px;
+  left: 16px;
+  top: 16px;
+  background: url("./utils//first-card.png");
+  border-radius: 8px;
+  margin: 12px 0px;
+  background-size: cover;
+}
+
+.card-heading {
+  position: static;
+  width: 295px;
+  height: 36px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin: 12px 0px;
+}
+
+.card-list {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 30px;
+}
+
+.item {
+  padding: 0px;
+  margin: 0px;
+  margin-top: 5px;
+}
+
+.client {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  color: #344563;
+}
+
+.role {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  color: #7a869a;
+}
+
+.year {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  color: #7a869a;
+}
+
+.card-main {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
+  order: 1;
+  margin: 12px 0px;
+}
+
+.language-container {
+  display: flex;
+  align-items: center;
+  padding: 4px 12px;
+  height: 24px;
+  background: #ebebff;
+  border-radius: 8px;
+  margin-right: 10px;
+}
+
+.language-text {
+  font-size: 12px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+}
+
+.card-footer {
+  margin: 25px 0px;
+}
+
+.card-button {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  border: 1px solid #6070ff;
+  box-sizing: border-box;
+  border-radius: 8px;
+  height: 48px;
+  background-color: #fff;
+}
+
+.card-button:hover {
+  background-color: whitesmoke;
+}
+
+#snapshot2 {
+  position: static;
+  width: 295px;
+  height: 220px;
+  left: 16px;
+  top: 16px;
+  background: url("./utils//card-image.png");
+  border-radius: 8px;
+  margin: 12px 0px;
+  background-size: cover;
+}
+
+#snapshot3 {
+  position: static;
+  width: 295px;
+  height: 220px;
+  left: 16px;
+  top: 16px;
+  background: url("./utils//card-image-2.png");
+  border-radius: 8px;
+  margin: 12px 0px;
+  background-size: cover;
+}
+
+#snapshot4 {
+  position: static;
+  width: 295px;
+  height: 220px;
+  left: 16px;
+  top: 16px;
+  background: url("./utils//card-image-3.png");
+  border-radius: 8px;
+  margin: 12px 0px;
+  background-size: cover;
+}
+
+#about-me {
+  background-image: url("./utils/about-me-background.svg");
+  margin-top: 60px;
+}
+
+.about-header {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  align-items: center;
+  color: #172b4d;
+  margin: 24px 12px;
+}
+
+.about-text {
+  margin-left: 12px;
+  margin-right: 16px;
+  margin-bottom: 0px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+}
+
+#second-link {
+  top: 20px;
+}
+
+#second-social-media {
+  top: 20px;
+}
+
+#about-button {
+  margin-left: 8px;
+}
+
+.base-list {
+  display: flex;
+  flex-direction: column;
 }
