--- a/style.css
+++ b/style.css
@@ -251,10 +251,11 @@ li a:hover {
 }
 
 .language-container {
-  display: flex;
-  align-items: center;
+  float: left;
+  justify-content: center;
+  align-content: center;
+  padding-bottom: 5px;
   padding: 4px 12px;
-  height: 24px;
   background: #ebebff;
   border-radius: 8px;
   margin-right: 10px;
@@ -418,4 +419,65 @@ li a:hover {
 
 .language-item-text {
   margin-left: 8px;
+}
+
+.footer {
+  background-image: url("./utils/Contact-me.png");
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  overflow: hidden;
+}
+
+.layer {
+  background-image: url("./utils/contact-form-shapes-mobile.svg");
+  position: absolute;
+  width: 265px;
+  height: 709.17px;
+  left: 153px;
+  top: 4452px;
+}
+
+.contact-me-header {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.contact-me-first {
+  margin-top: 90px;
+}
+
+.contact-me-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ebebff;
+  margin: 2px 20px;
+}
+
+.form-list {
+  display: flex;
+  flex-direction: column;
+}
+
+#fname {
+  background: #ffffff;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 15px 16px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  color: #172b4d;
 }
