--- a/style.css
+++ b/style.css
@@ -493,11 +493,12 @@ textarea {
   line-height: 24px;
   color: #b3bac5;
   width: 305px;
-  height: 150px;
+  height: 130px;
   padding: 12px;
 }
 
 .contact-me-button {
+  width: 150px;
   border-style: none;
   display: flex;
   flex-direction: row;
@@ -518,4 +519,8 @@ textarea {
 
 .contact-me-button:hover {
   opacity: 0.7;
+}
+
+.form-container {
+  margin-top: 35px;
 }
