--- a/style.css
+++ b/style.css
@@ -5,16 +5,17 @@
 html {
   display: flex;
   justify-content: center;
-  background: #E5E5E5;
+  background: #e5e5e5;
 }
 
 body {
   width: 375px;
-  background-color: #F7F7F9;
+  background-color: #f7f7f9;
 }
 
-a {
-  text-decoration: none;
+a, a:link, a:visited, a:focus, a:hover, a:active{
+  text-decoration:none; 
+  cursor: pointer;
 }
 
 header {
@@ -23,39 +24,32 @@ header {
   flex-direction: column;
 }
 
-.logo-heading {
+nav {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 58px;
-  margin-bottom: 5px;
-  margin-left: 24px;
-  margin-right: 24px;
+  padding: 40px 20px;
 }
 
-#my-logo {
+.my-logo {
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
   color: #6070ff;
 }
 
-#my-logo:hover {
+.my-logo:hover {
   opacity: 0.7;
 }
 
-#hamburger-menu {
+.hamburger-menu {
   width: 20px;
   height: 20px;
   color: #acb7c3;
 }
 
-#hamburger-menu:hover {
+.hamburger-menu:hover {
   opacity: 0.7;
 }
 
@@ -63,14 +57,30 @@ header {
   color: #6070ff;
 }
 
-#front-section {
+.nav-menu {
+  display: none;
+}
+
+.nav-menu-link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #344563;
+}
+
+.nav-menu-link:hover {
+  opacity: 0.7;
+}
+
+.front-section {
   background-image: url("./utils/header-shapesmobile@2x.svg");
   display: flex;
   flex-direction: column;
   margin-top: 20px;
 }
 
-#first-subsection {
+.first-subsection {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
@@ -81,7 +91,7 @@ header {
   margin-top: 100px;
 }
 
-#second-subsection {
+.second-subsection {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -522,4 +532,31 @@ textarea {
 
 .add-padding-left {
   padding-left: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  header {
+    background: url("./utils/header-background-shape-desktop.svg");
+    background-color: #000;
+  }
+
+  .hamburger-menu {
+    display: none;
+  }
+
+  nav { 
+    margin: 5px 100px;
+  }
+
+  .nav-menu {
+    display:flex;
+    justify-content: space-between;
+    width: 300px;
+  }
 }
