--- a/style.css
+++ b/style.css
@@ -582,4 +582,146 @@ textarea {
     margin-left: 185px;
     margin-bottom: 390px;
   }
+
+  #works {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: row;
+    padding: 16px;
+    width: 1156px;
+    height: auto;
+    background: #fff;
+    border: 1px solid #dfe1e6;
+    border-radius: 24px;
+    margin: 40px 142px;
+    align-items: center;
+  }
+
+  #snapshot1 {
+    width: 544px;
+    height: 448px;
+    background: url("./utils/Snapshoot-Portfolio.svg");
+    border-radius: 8px;
+    background-size: cover;
+    margin: 8px 8px;
+  }
+
+  .card-body-container {
+    display: flex;
+    flex-direction: column;
+    width: 544px;
+    margin: 20px 20px;
+  }
+
+  .card-heading {
+    width: auto;
+    height: auto;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 52px;
+  }
+
+  .card-list {
+    justify-content: right;
+    margin-right: 30px;
+  }
+
+  .card-list li {
+    margin-right: 10px;
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .item {
+    margin-top: 2px;
+  }
+
+  .client {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    color: #344563;
+  }
+
+  .role {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    color: #7a869a;
+  }
+
+  .year {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    color: #7a869a;
+  }
+
+  .card-main {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .language-list {
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+
+  .language-item {
+    height: 24px;
+  }
+
+  .language-container {
+    padding: 4px 12px;
+    background: #ebebff;
+    border-radius: 8px;
+    margin-right: 10px;
+  }
+
+  .language-text {
+    font-size: 12px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    margin: 0.0001px 0.0001px;
+  }
+
+  #snapshot2 {
+    width: 544px;
+    height: 448px;
+    background: url("./utils/Snapshoot-Portfolio2.svg");
+    border-radius: 8px;
+    background-size: cover;
+    margin: 8px 8px;
+  }
+
+  .reverse-row {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+
+  #snapshot3 {
+    width: 544px;
+    height: 448px;
+    background: url("./utils/Snapshoot-Portfolio3.svg");
+    border-radius: 8px;
+    background-size: cover;
+    margin: 8px 8px;
+  }
+
+  #snapshot4 {
+    width: 544px;
+    height: 448px;
+    background: url("./utils/Snapshoot-Portfolio4.svg");
+    border-radius: 8px;
+    background-size: cover;
+    margin: 8px 8px;
+  }
 }
