--- a/style.css
+++ b/style.css
@@ -529,7 +529,7 @@ textarea {
   padding-left: 5px;
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 992px) {
   body {
     width: 1440px;
     margin: 0.0001px;
@@ -811,6 +811,6 @@ textarea {
   }
 
   .layer {
-    background-image: none;
+    display: none;
   }
 }
