--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ li a:hover {
   border: 1px solid #6070ff;
   box-sizing: border-box;
   border-radius: 8px;
+  width: 114px;
   height: 48px;
   background-color: #fff;
   transition: color 4s, border 8s;
@@ -359,6 +360,7 @@ li a:hover {
 
 #about-button {
   margin-left: 8px;
+  width: 160px;
 }
 
 .base-list {
