Fix linter errors

--- a/style.css
+++ b/style.css
@@ -492,7 +492,7 @@ li a:hover {
 
 textarea {
   background: #fff;
-  color:black;
+  color: #000;
   border: 1px solid #cfd8dc;
   border-radius: 8px;
   font-style: normal;
